--- a/wp-content/themes/twentysixteen/less/style.less
+++ b/wp-content/themes/twentysixteen/less/style.less
@@ -31,7 +31,7 @@
 }
 
 input[type="radio"], input[type="checkbox"] {
-    margin: 1px 0 0;
+    margin: 3px 0 0;
     margin-top: 1px \9;
 }
 
@@ -147,7 +147,7 @@ body {
             color: @white; 
             font-size: 15px;
             font-weight: bold;
-            
+
             &:hover, &:active, &:focus {
                 text-decoration: none;
             }
@@ -159,19 +159,19 @@ body {
                 text-decoration: none;
             }
         }
-        
+
         &.current {
             background: @blue;
         }
-        
+
         &:nth-of-type(n+4) {
             float: right;
         }
-        
+
         &#menu-item-28 {
             border: 2px solid @blue;
             a { color: @blue; }
-            
+
             &:hover {
                 a { color: @white; }
             }
@@ -209,32 +209,32 @@ body {
 .main-slider {
     padding-top: 0px !important;
     padding-bottom: 0px !important;
-   // margin-top: 10px !important;
-/*    margin-left: -20px !important;
-    margin-right: -20px !important;*/
-/*    a {
-        display: block;
-        img {
+    // margin-top: 10px !important;
+    /*    margin-left: -20px !important;
+        margin-right: -20px !important;*/
+    /*    a {
+            display: block;
+            img {
+                width: 100%;
+            }
+        }*/
+
+    /*    &::before {
+            content: '';
+            display: block;
+             Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,7db9e8+100,000000+100&1+0,0+100 
+             Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+14,000000+85,000000+85&1+14,0+85,0+85 
+             Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#111111+14,000000+85,000000+85&1+14,0+85,0+85 
+            background: -moz-linear-gradient(top,  rgba(17,17,17,1) 14%, rgba(0,0,0,0) 85%);  FF3.6-15 
+            background: -webkit-linear-gradient(top,  rgba(17,17,17,1) 14%,rgba(0,0,0,0) 85%);  Chrome10-25,Safari5.1-6 
+            background: linear-gradient(to bottom,  rgba(17,17,17,1) 14%,rgba(0,0,0,0) 85%);  W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ 
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#111111', endColorstr='#00000000',GradientType=0 );  IE6-9 
+    
+            position: absolute;
             width: 100%;
-        }
-    }*/
-
-/*    &::before {
-        content: '';
-        display: block;
-         Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,7db9e8+100,000000+100&1+0,0+100 
-         Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+14,000000+85,000000+85&1+14,0+85,0+85 
-         Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#111111+14,000000+85,000000+85&1+14,0+85,0+85 
-        background: -moz-linear-gradient(top,  rgba(17,17,17,1) 14%, rgba(0,0,0,0) 85%);  FF3.6-15 
-        background: -webkit-linear-gradient(top,  rgba(17,17,17,1) 14%,rgba(0,0,0,0) 85%);  Chrome10-25,Safari5.1-6 
-        background: linear-gradient(to bottom,  rgba(17,17,17,1) 14%,rgba(0,0,0,0) 85%);  W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ 
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#111111', endColorstr='#00000000',GradientType=0 );  IE6-9 
-
-        position: absolute;
-        width: 100%;
-        height: 70px;
-        z-index: 100;
-    }*/
+            height: 70px;
+            z-index: 100;
+        }*/
 }
 /*BREADSCRUMB*/
 .breadcrumbs {
@@ -245,7 +245,7 @@ body {
             text-decoration: none;
         }
     }
-    
+
     .fa {
         margin: 0px 5px; 
     }
@@ -487,7 +487,11 @@ body {
             width: 218px;
             height: 100px;
             position: relative;
-
+            text-align: center;
+            img {
+                width: 80%;
+                height: auto;
+            }
         }
     }
 
@@ -541,7 +545,7 @@ body {
         }
         background: url('../img/breadscrumb1.jpg') right no-repeat;
         height: 150px;
-/*        margin-top: 30px;*/
+        /*        margin-top: 30px;*/
         .content-page-title {
             margin-top: 40px;
         }
@@ -648,7 +652,7 @@ body {
                 right: 0px;
             }
         }
-        
+
         .btn-submit {
             color: @white;
             background: @blue;
@@ -763,8 +767,8 @@ body {
             }
         }
     }
-    
-    
+
+
     .main-profile-img {
         img {
             width: 100%;
@@ -785,7 +789,7 @@ body {
             width: 22%;
         }
     }
-    
+
     .main-profile-img-list {
         margin-top: 10px;
         .swiper-slide {
@@ -839,7 +843,7 @@ body {
             opacity: 0.3;
         }
     }
-    
+
 }
 .custom-pagination {
     .page-numbers {
@@ -911,7 +915,7 @@ body {
             }
         }
     }
-    
+
     .post-thumbnail {
         img {
             width: 100%;
@@ -944,12 +948,12 @@ body {
                     content: @fa-var-angle-right;
                     margin-right: 10px;
                 }
-                
+
                 &:hover, &:focus, &:active {
                     color: @blue;
                 }
             }
-            
+
         }
     }
 
@@ -976,8 +980,8 @@ body {
         font-weight: bold;
         margin-bottom: 5px;
         input[type=radio] {
-            
-            margin: 3px 0 0 -20px;
+
+            margin: 6px 0 0 -20px;
         }
     }
     .radio {
@@ -987,34 +991,34 @@ body {
         margin-left: 50px;
     }
     h1 {
-            text-align: center;
-    text-transform: uppercase;
-    font-weight: 100;
-    margin-bottom: 50px;
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: 100;
+        margin-bottom: 50px;
     }
-    
-    
+
+
     .upload-image {
         height: 85px;
         border: 2px dashed #efefef;
         margin: 15px 0px;
         text-align: center;
-        
+
         .control-label {
             width: 100%;
             height: 100%;
             text-align: center;
             padding-top: 20px;
         }
-        
+
         input[type="file"] {
             visibility: hidden;
         }
         .dragover {
-            
+
         }
     }
-    
+
     .btn-create-profile {
         margin: auto;
         background: @blue;
@@ -1025,7 +1029,7 @@ body {
             outline: none;
         }
     }
-    
+
     .inputImages-thumb {
         ul {
             .ul;
@@ -1037,6 +1041,10 @@ body {
                 display: inline-block;
             }
         }
+    }
+    
+    .required {
+        color: red;
     }
 }
 .form-header {
@@ -1054,10 +1062,10 @@ body {
     img {
         width: 55%;
         margin-left: 30px;
-        
+
     }
-    
-    
+
+
 }
 /* FOOTER */
 .footer {
@@ -1110,22 +1118,22 @@ body {
 .page-template-page-intro {
     width: 100%;
     height: 100%;
-    
+
     .language-bar {
-            position: absolute;
-    bottom: 40px;
-    left: 50%;
-    transform: translateX(-50%);
+        position: absolute;
+        bottom: 40px;
+        left: 50%;
+        transform: translateX(-50%);
         .language-chooser {
             .ul;
             li {
                 display: inline-block;
-                    margin: 0px 20px;
+                margin: 0px 20px;
                 a {
                     display: block;
                     color: @white;
                     font-size: 14px;
-                    
+
                     &:hover,&:active,&:focus {
                         color: @blue;
                         text-decoration: none;
@@ -1134,11 +1142,11 @@ body {
             }
         }
     }
-    
+
     .contact-info {
-            position: absolute;
-    top: 50px;
-    right: 50px;
+        position: absolute;
+        top: 50px;
+        right: 50px;
         ul {
             .ul;
             li {
@@ -1160,8 +1168,8 @@ body {
                     }
                 }
                 &.tel {
-                        position: relative;
-    top: -4px;
+                    position: relative;
+                    top: -4px;
                 }
                 &.tel a {
                     width: 170px;
@@ -1179,7 +1187,7 @@ body {
                         background-position: -39px 0px;
                     }
                 }
-                
+
                 &.social-gg a {
                     width: 39px;
                     height: 39px;
@@ -1188,7 +1196,7 @@ body {
                     }
                 }
             }
-            
+
         }
     }
 }
